--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "bootstrap-social": "^5.1.1",
+    "core-js": "3",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-scripts": "3.2.0",
+    "react-frame-component": "^4.1.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.4",
+    "reactstrap": "^8.6.0",
     "web3": "1.2.2"
   },
   "scripts": {
