--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "react": "16.11.0",
     "react-dom": "16.11.0",
     "react-frame-component": "^4.1.3",
+    "react-grid-system": "^7.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "reactstrap": "^8.6.0",
