--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-grid-system": "^7.1.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
+    "react-step-progress": "^1.0.3",
     "reactstrap": "^8.6.0",
     "web3": "1.2.2"
   },
