--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "bootstrap": "^4.5.2",
     "bootstrap-social": "^5.1.1",
     "core-js": "3",
